--- a/package.json
+++ b/package.json
@@ -8,12 +8,12 @@
     "dev": "NODE_ENV=development tsx server/index.ts",
     "build": "tsx script/build.ts",
     "start": "NODE_ENV=production node dist/index.cjs",
-    "check": "tsc",
+    "check": "biome check .",
     "db:push": "drizzle-kit push",
-    "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-    "lint:fix": "eslint . --ext ts,tsx --fix",
-    "format": "prettier --write \"**/*.{ts,tsx,js,jsx,json,css,md}\"",
-    "format:check": "prettier --check \"**/*.{ts,tsx,js,jsx,json,css,md}\""
+    "lint": "biome lint .",
+    "lint:fix": "biome lint --write .",
+    "format": "biome format --write .",
+    "typecheck": "tsc --noEmit"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.10.0",
@@ -86,7 +86,7 @@
     "zod-validation-error": "^3.5.4"
   },
   "devDependencies": {
-    "@eslint/js": "^9.39.2",
+    "@biomejs/biome": "^1.9.4",
     "@replit/vite-plugin-cartographer": "^0.4.4",
     "@replit/vite-plugin-dev-banner": "^0.1.1",
     "@replit/vite-plugin-runtime-error-modal": "^0.0.4",
@@ -105,17 +105,10 @@
     "autoprefixer": "^10.4.21",
     "drizzle-kit": "^0.31.4",
     "esbuild": "^0.25.0",
-    "eslint": "^9.39.2",
-    "eslint-config-prettier": "^10.1.8",
-    "eslint-plugin-react-hooks": "^7.0.1",
-    "eslint-plugin-react-refresh": "^0.4.26",
-    "eslint-plugin-sonarjs": "^3.0.5",
     "postcss": "^8.5.6",
-    "prettier": "^3.7.4",
     "tailwindcss": "^4.1.14",
     "tsx": "^4.20.5",
     "typescript": "5.6.3",
-    "typescript-eslint": "^8.50.1",
     "vite": "^7.1.9"
   },
   "optionalDependencies": {
@@ -124,6 +117,12 @@
   "pnpm": {
     "overrides": {
       "zod-validation-error": "^3.5.4"
-    }
+    },
+    "onlyBuiltDependencies": [
+      "@biomejs/biome",
+      "bcrypt",
+      "bufferutil",
+      "esbuild"
+    ]
   }
 }
