--- a/.env
+++ b/.env
@@ -3,3 +3,4 @@ SMTP_PORT=587
 SMTP_USER=jckessell@gmail.com
 SMTP_PASS="xcnn hxna ilmt qjzq"
 SMTP_FROM="Cornerstone Law Firm <jckessell@gmail.com>"
+VITE_SITE_ORIGIN=https://cornerstone-law-group.replit.app/
