Fixed footer and mobile dock near the bottom

--- a/.env.example
+++ b/.env.example
@@ -9,3 +9,9 @@ VITE_CLIO_GROW_INTAKE_BASE_URL="/demo/intake"
 # NEXT_PUBLIC_CLIO_CLIENT_PORTAL_URL="https://clients.clio.com/login"
 # NEXT_PUBLIC_LAWPAY_URL="/demo/pay"
 # NEXT_PUBLIC_CLIO_GROW_INTAKE_BASE_URL="/demo/intake"
+
+# Server-side Clio OAuth (scaffolding)
+CLIO_CLIENT_ID=
+CLIO_CLIENT_SECRET=
+CLIO_REDIRECT_URI=
+CLIO_SCOPES=
