--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "license": "MIT",
   "scripts": {
     "dev:client": "vite dev --port 5000",
-    "dev": "NODE_ENV=development pnpm exec tsx server/index.ts",
+    "dev": "pnpm exec tsx script/dev.ts",
     "build": "pnpm exec tsx script/build.ts",
     "start": "NODE_ENV=production node dist/index.cjs",
     "check": "biome check .",
@@ -64,6 +64,7 @@
     "input-otp": "^1.4.2",
     "lucide-react": "^0.545.0",
     "memorystore": "^1.6.7",
+    "nanoid": "^5.0.9",
     "next-themes": "^0.4.6",
     "nodemailer": "^6.10.1",
     "passport": "^0.7.0",
@@ -107,6 +108,7 @@
     "autoprefixer": "^10.4.21",
     "drizzle-kit": "^0.31.4",
     "esbuild": "^0.25.0",
+    "kill-port": "^2.0.1",
     "playwright": "^1.48.0",
     "postcss": "^8.5.6",
     "tailwindcss": "^4.1.14",
